--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.UKLRecycle"
         tools:targetApi="31">
         <activity
-            android:name=".signin"
+            android:name=".MoveActivity"
             android:exported="false" />
         <activity
             android:name=".Splash"
